Add config files

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,7 @@
 # =====================================================
 /dist
 /temp
-/**/config/**/*.json
-!/**/config/**/*.example.json
+/**/config/**/*.example.json
 
 # =====================================================
 # Node.js
