--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,10 @@
         "emitDecoratorMetadata": true,
         "skipLibCheck": true,
         "forceConsistentCasingInFileNames": true,
-        "resolveJsonModule": true
+        "resolveJsonModule": true,
+        "allowUnusedLabels": true,
+        "noUnusedLocals": false,
+        "noUnusedParameters": false,
     },
     "exclude": ["dist", "node_modules", "tests"]
 }
