--- a/config/tournament/config.json
+++ b/config/tournament/config.json
@@ -1,6 +1,4 @@
 {
-    "apiKey": "402208a8e88f4fcd0bffc160d6ddb74c4cdf0ae8",
-    "openaiApiKey": "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",
     "auctionDuration": 15,
     "minBid": 100,
     "maxBid": 15000,
@@ -8,5 +6,6 @@
     "AIReport": true,
     "startingBalance": 20000,
     "shufflePlayers": true,
-    "tierOrder": [4, 3, 2, 1]
+    "tierOrder": [4, 3, 2, 1],
+    "threadPrefix": "WAH2023 Test Run 2"
 }
