Change package commands

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
         "commands:rename": "npm run build && node --enable-source-maps dist/start-bot.js commands rename",
         "commands:delete": "npm run build && node --enable-source-maps dist/start-bot.js commands delete",
         "commands:clear": "npm run build && node --enable-source-maps dist/start-bot.js commands clear",
-        "start": "npm run start:bot",
+        "dev": "npm run start:bot",
+        "start": "node --enable-source-maps dist/start-bot.js",
         "start:bot": "npm run build && node --enable-source-maps dist/start-bot.js",
         "start:manager": "npm run build && node --enable-source-maps dist/start-manager.js",
         "start:pm2": "npm run build && npm run pm2:start",
